@@ -193,8 +193,9 @@ L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
- © 2015-2016 Michal Špaček
- BSD 2-Clause License
+© 2015-2016 Michal Špaček
+
+BSD 2-Clause License
 
 =head1 VERSION
 
