@@ -1,4 +1,5 @@
 0.03
+ - Improve LICENSE AND COPYRIGHT section in doc.
 
 0.02 2016-04-04T15:20:27+02:00
  - Add LICENSE file.
